<resources>
    <string name="app_name">Vivu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_expense">Expense</string>
    <string name="nav_checklist">Checklist</string>
    <string name="nav_music">Music</string>
    <string name="nav_more">More</string>
    <string name="common_back">Back</string>
    <string name="common_add">Add</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_delete">Delete</string>
    <string name="common_update">Update</string>
    <string name="common_reset">Reset</string>
    <string name="common_am">AM</string>
    <string name="common_pm">PM</string>
    <string name="common_opening_module">Opening %1$s...</string>
    <string name="more_title">More</string>
    <string name="more_subtitle">All features &amp; settings</string>
    <string name="more_quick_access">Quick Access</string>
    <string name="more_travel_diary">Travel Diary</string>
    <string name="more_maintenance">Maintenance</string>
    <string name="more_rest_timer">Rest Timer</string>
    <string name="more_currency">Currency</string>
    <string name="more_settings">Settings</string>
    <string name="more_app_tagline">Your ultimate motorbike travel companion</string>
    <string name="more_version">Version 1.0.0</string>
    <string name="more_made_with">Made with </string>
    <string name="more_for_travelers"> for backpackers &amp; road trippers</string>
    <string name="checklist_title">Travel Checklist</string>
    <string name="checklist_subtitle">Prepare for your trip</string>
    <string name="checklist_preparation_progress">Preparation Progress</string>
    <string name="checklist_items_completed_default">0 of 0 items completed</string>
    <string name="checklist_items_completed_format">%1$d of %2$d items completed</string>
    <string name="checklist_add_item">+ Add Item</string>
    <string name="checklist_add_list">+ Add List</string>
    <string name="checklist_reset">Reset Checklist</string>
    <string name="checklist_toast_reset_group">Reset group %1$s</string>
    <string name="checklist_dialog_delete_title">Confirm delete</string>
    <string name="checklist_dialog_delete_category_message">Delete list "%1$s" and all items inside?</string>
    <string name="checklist_toast_deleted_group">Deleted %1$s</string>
    <string name="checklist_dialog_reset_title">Confirm reset</string>
    <string name="checklist_dialog_reset_message">Uncheck all checklist items?</string>
    <string name="checklist_toast_reset_all">Checklist reset</string>
    <string name="checklist_error_enter_category_name">Please enter a list name.</string>
    <string name="checklist_error_category_name_invalid">List name must be 2-40 chars and contain only letters/numbers.</string>
    <string name="checklist_error_category_exists">List name already exists.</string>
    <string name="checklist_toast_create_list_first">Please create a list first.</string>
    <string name="checklist_error_enter_item_name">Please enter an item name.</string>
    <string name="checklist_error_item_name_invalid">Item name must be 2-60 chars and contain only letters/numbers.</string>
    <string name="checklist_toast_select_category">Please select a list.</string>
    <string name="checklist_error_item_exists">Item already exists in this list.</string>
    <string name="checklist_dialog_delete_item_message">Delete this item?</string>
    <string name="checklist_dialog_edit_item_title">Edit item name</string>
    <string name="checklist_error_name_empty">Name cannot be empty.</string>
    <string name="checklist_item_name_label">Item Name</string>
    <string name="checklist_item_name_hint">Enter item name...</string>
    <string name="checklist_select_list">Select List</string>
    <string name="checklist_list_name_label">List Name</string>
    <string name="checklist_list_name_hint">Enter list name (e.g. VEHICLE)...</string>
    <string name="currency_tools_title">Currency Tools</string>
    <string name="currency_tools_subtitle">Offline converter and simple calculator</string>
    <string name="currency_tab_converter">Converter</string>
    <string name="currency_tab_calculator">Calculator</string>
    <string name="currency_amount_label">Amount</string>
    <string name="currency_amount_hint">0.00</string>
    <string name="currency_default_amount">100</string>
    <string name="currency_from">From</string>
    <string name="currency_to">To</string>
    <string name="currency_swap_content_description">Swap currencies</string>
    <string name="currency_converted_amount">Converted Amount</string>
    <string name="currency_exchange_rate">Exchange Rate</string>
    <string name="currency_exchange_rate_format">1 %1$s = %2$s %3$s</string>
    <string name="currency_offline_note">Rates are stored locally for quick offline use.</string>
    <string name="currency_quick_reference">Quick Reference</string>
    <string name="currency_invalid_amount_format">Invalid amount format.</string>
    <string name="currency_invalid_amount_range">Amount is out of valid range.</string>
    <string name="currency_name_usd">US Dollar</string>
    <string name="currency_name_vnd">Vietnamese Dong</string>
    <string name="currency_name_eur">Euro</string>
    <string name="currency_name_gbp">British Pound</string>
    <string name="currency_name_jpy">Japanese Yen</string>
    <string name="currency_name_thb">Thai Baht</string>
    <string name="currency_name_sgd">Singapore Dollar</string>
    <string name="music_player_title">Music Player</string>
    <string name="music_player_subtitle">Offline MP3 Player</string>
    <string name="music_no_song">No song selected</string>
    <string name="music_artist_unknown">Unknown artist</string>
    <string name="music_library_title">Music Library</string>
    <string name="music_tab_songs">Songs</string>
    <string name="music_tab_playlists">Playlists</string>
    <string name="music_create_playlist">Create new playlist</string>
    <string name="music_playlist_details">Playlist Details</string>
    <string name="music_play_all">Play all</string>
    <string name="music_song_title_placeholder">Song Title</string>
    <string name="music_artist_placeholder">Artist</string>
    <string name="music_artist_name_placeholder">Artist Name</string>
    <string name="music_playlist_name_placeholder">Playlist Name</string>
    <string name="clock_host_title">Smart Alarm</string>
    <string name="clock_host_tab_alarm">Alarm</string>
    <string name="clock_host_tab_timer">Timer</string>
    <string name="alarm_title">Your Alarms</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="alarm_name">Alarm name</string>
    <string name="alarm_name_hint">Alarm label</string>
    <string name="alarm_vibration">Alarm with vibration</string>
    <string name="alarm_save">Save Alarm</string>
    <string name="alarm_days_weekdays_placeholder">Weekdays</string>
    <string name="alarm_label_placeholder">Wake up</string>
    <string name="alarm_day_mon">Mon</string>
    <string name="alarm_day_tue">Tue</string>
    <string name="alarm_day_wed">Wed</string>
    <string name="alarm_day_thu">Thu</string>
    <string name="alarm_day_fri">Fri</string>
    <string name="alarm_day_sat">Sat</string>
    <string name="alarm_day_sun">Sun</string>
    <string name="alarm_repeat_everyday">Everyday</string>
    <string name="alarm_repeat_weekdays">Weekdays</string>
    <string name="alarm_repeat_once">Once</string>
    <string name="alarm_default_label">Alarm</string>
    <string name="alarm_error_invalid_label">Alarm label must be 2-40 chars and contain only letters/numbers.</string>
    <string name="alarm_error_invalid_label_toast">Invalid alarm label.</string>
    <string name="alarm_toast_added">Added!</string>
    <string name="alarm_toast_updated">Updated!</string>
    <string name="alarm_toast_deleted">Alarm deleted</string>
    <string name="alarm_toast_enabled_at">Alarm enabled at %1$d:%2$02d</string>
    <string name="alarm_exact_permission_message">Please allow Alarms &amp; reminders permission for exact alarms.</string>
    <string name="rest_timer_status_ready">Ready to start</string>
    <string name="rest_timer_status_running">Timer is running</string>
    <string name="rest_timer_status_time_to_rest">Time to Rest!</string>
    <string name="rest_timer_settings_title">Timer Settings</string>
    <string name="rest_timer_target_time_hint">Or set target time (e.g. 11:25)</string>
    <string name="rest_timer_select_sound">Select alarm sound</string>
    <string name="rest_timer_toast_pause_to_set_time">Please pause timer to set new time</string>
    <string name="rest_timer_target_time_format">Target Time: %1$02d:%2$02d %3$s</string>
    <string name="rest_timer_sound_format">Sound: %1$s</string>
    <string name="rest_timer_ringtone_picker_title">Select Alarm Sound</string>
    <string name="rest_timer_exact_permission_message">Please allow Alarms &amp; reminders permission for Timer.</string>
    <string-array name="rest_timer_durations">
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>3 Hours</item>
    </string-array>
    <string name="calculator_error_divide_by_zero">Cannot divide by zero</string>
    <string name="diary_title">Travel Diary</string>
    <string name="common_save">Save</string>
    <string name="common_close">Close</string>
    <string name="expense_dialog_trip_label">Trip</string>
    <string name="expense_dialog_category_label">Expense Category</string>
    <string name="expense_dialog_manage_category">+ Manage</string>
    <string name="expense_dialog_amount_label">Amount (VND)</string>
    <string name="expense_dialog_description_label">Description</string>
    <string name="expense_dialog_note_hint">What did you buy?</string>
    <string name="maintenance_fuel_dialog_title">Log Fuel</string>
    <string name="maintenance_fuel_odo_label">Current Odometer (km)</string>
    <string name="maintenance_fuel_cycle_baseline_placeholder">Fuel cycle baseline: -- km</string>
    <string name="maintenance_fuel_price_per_liter_label">Price per Liter (VND)</string>
    <string name="maintenance_fuel_total_cost_label">Total Fuel Cost (VND)</string>
    <string name="maintenance_fuel_liters_preview">Liters will be calculated automatically.</string>
    <string name="maintenance_fuel_location_label">Location</string>
    <string name="maintenance_fuel_location_hint">e.g. Da Nang</string>
    <string name="maintenance_log_dialog_title">Log Maintenance</string>
    <string name="maintenance_log_type_label">Maintenance Type</string>
    <string name="maintenance_log_odo_label">Odometer at Service (km)</string>
    <string name="maintenance_log_cost_label">Cost (VND)</string>
    <string name="maintenance_log_cost_hint">Optional</string>
    <string name="maintenance_log_note_label">Note</string>
    <string name="maintenance_log_note_hint">e.g. Synthetic oil change</string>
    <string name="vehicle_manage_dialog_title">Manage Vehicle</string>
    <string name="vehicle_manage_existing_label">Select Existing Vehicle</string>
    <string name="vehicle_manage_assign_current_trip">Assign this vehicle to current trip</string>
    <string name="vehicle_manage_load_for_edit">Load for Edit</string>
    <string name="vehicle_manage_delete_vehicle">Delete Vehicle</string>
    <string name="vehicle_manage_add_new_label">Add New Vehicle</string>
    <string name="vehicle_manage_form_add_mode">Fill in the form to add a new vehicle.</string>
    <string name="vehicle_manage_plate_hint">License plate</string>
    <string name="vehicle_manage_initial_odo_hint">Initial odometer</string>
    <string name="vehicle_manage_current_odo_hint">Current odometer</string>
    <string name="vehicle_manage_save_vehicle">Save Vehicle</string>
</resources>